# AdventOfCode

./: .gitignore  Cargo.toml  README.md  advent.el  deps.edn
resources/2020/19/: input
resources/2022/5/: header
src/utils/: bimap.clj
src/year_2017/: day_1.clj  day_3.clj
src/year_2020/: day_1.clj  day_10.clj  day_11.clj  day_12.clj  day_13.clj  day_14.clj  day_15.clj  day_16.clj  day_17.clj  day_18.clj  day_19.clj  day_2.clj  day_20.clj  day_21.clj  day_22.clj  day_23.clj  day_24.clj  day_25.clj  day_25_mountaints.clj  day_3.clj  day_4.clj  day_5.clj  day_6.clj  day_7.clj  day_8.clj  day_9.clj
src/year_2021/: day_1.clj  day_10.jl  day_2.clj  day_3.clj  day_4.clj  day_5.clj  day_6.clj  day_6.jl  day_7.jl  day_8.jl  day_9.jl
src/year_2022/: day_1.clj  day_10.rs  day_11.clj  day_12.clj  day_13.clj  day_14.clj  day_15.rs  day_16.rs  day_17.clj  day_18.clj  day_19.jl  day_2.clj  day_20.clj  day_20.jl  day_21.clj  day_22.clj  day_23.clj  day_24.clj  day_25.clj  day_3.clj  day_4.clj  day_5.clj  day_6.clj  day_7.clj  day_7.rs  day_8.clj  day_9.clj
src/year_2023/: day_1.clj  day_10.clj  day_10.jl  day_11.clj  day_12.clj  day_13.clj  day_14.clj  day_15.clj  day_16.clj  day_2.clj  day_3.clj  day_4.clj  day_5.clj  day_5.jl  day_6.clj  day_7.clj  day_8.clj  day_9.clj
test/kiranshila/: aoc2020_test.clj
test/year_2017/: day_1_test.clj  day_3_test.clj
test/year_2020/: day_10_test.clj  day_12_test.clj  day_13_test.clj  day_1_test.clj  day_2_test.clj  day_3_test.clj  day_4_test.clj  day_5_test.clj  day_6_test.clj  day_7_test.clj  day_8_test.clj  day_9_test.clj
